o Repair name/number trees with duplicate keys (better)
o Fix bad name detection and improve error message
o Fix regression where bookmark strings were mangled
o Fix (partially) efficiency of page renumbering on very large files
o Disambiguate annotation object numbers where a page is copied
o Allow optional use of jbig2dec to decode JBIG2 streams

2.8.1 (April 2025)

o Pdf.lookup_chain can look within arrays
o Pdf.replace_chain can replace within arrays
o Repair name/number trees with duplicate keys
o Pdfpage.pagenumber_of_target works on GoTo actions
o Allow optional shallow reading of destinations
o Ensure that shallow destinations are transformed
o Empty name now a warning not an error (written as /)

2.8 (December 2024)

o Read and write bookmark colour and flags
o Fixed a bug in Pdfst.renumber_parent_trees
o Only call renumber_parent_trees when processing struct trees

2.7.2 (October 2024)

o Process destination name tree in Pdfpage.pdf_of_pages
o Options to change the whitespace between operators
o Allow writing of comments in streams
o Allow addition of top-level Document in struct tree when merging
o New lookup_chain / replace_chain functions in Pdf
o Revert 2.7 "Remember and reapply inline image decode parameters"

2.7.1 (July 2024)

o Fix sign extension in js_of_ocaml
o Pdfannot expanded to more annotation types
o Extract code to Pdftree module (API subject to change)
o Structure tree optionally trimmed on Pdf.pdf_of_pages
o Structure tree optionally trimmed & merged in Pdfmerge

2.7 (February 2024)

o Add opam file in-source
o Cope with more malformed bookmarks
o Remember and reapply inline image decode parameters
o Pdfimage extracts and stores JBIG2Globals
o Option to compress a stream only if it is made smaller
o Encode predictor for PNG Sub (bpc = 8, 3 components)
o Fix for LZWDecode streams which overfill the table
o New endpage_fast
o Remove some very old unused Pdfimage code
o Reconstruct tree in Pdfpage.pdf_of_pages for better bookmarks